cosmos/steamaudio-sys/phonon/phonon.h


typedef int                 IPLint32;   
typedef float               IPLfloat32; 
typedef enum {
    IPL_STATUS_SUCCESS,         
    IPL_STATUS_FAILURE,         
    IPL_STATUS_OUTOFMEMORY,     
    IPL_STATUS_INITIALIZATION   
} IPLerror;
typedef struct {
    IPLfloat32 x;
    IPLfloat32 y;
    IPLfloat32 z;
} IPLVector3;
typedef enum {
    IPL_SPEAKERLAYOUTTYPE_MONO,
    IPL_SPEAKERLAYOUTTYPE_STEREO,
    IPL_SPEAKERLAYOUTTYPE_QUADRAPHONIC,
    IPL_SPEAKERLAYOUTTYPE_SURROUND_5_1,
    IPL_SPEAKERLAYOUTTYPE_SURROUND_7_1,
    IPL_SPEAKERLAYOUTTYPE_CUSTOM
} IPLSpeakerLayoutType;
typedef enum {
    IPL_AUDIOEFFECTSTATE_TAILREMAINING,
    IPL_AUDIOEFFECTSTATE_TAILCOMPLETE,
} IPLAudioEffectState;
typedef struct {
    IPLSpeakerLayoutType type;
    IPLint32 numSpeakers;
    IPLVector3* speakers;
} IPLSpeakerLayout;
typedef struct {
    IPLint32 samplingRate;
    IPLint32 frameSize;
} IPLAudioSettings;
typedef struct {
    IPLint32 numChannels;
    IPLint32 numSamples;
    IPLfloat32** data;
} IPLAudioBuffer;
typedef struct {
    IPLVector3 direction;
} IPLPanningEffectParams;
IPLAPI IPLAudioEffectState IPLCALL iplPanningEffectApply(IPLPanningEffect effect, IPLPanningEffectParams* params, IPLAudioBuffer* in, IPLAudioBuffer* out);
IPLAPI IPLAudioEffectState IPLCALL iplPanningEffectGetTail(IPLPanningEffect effect, IPLAudioBuffer* out);
typedef enum {
    IPL_HRTFINTERPOLATION_NEAREST,
    IPL_HRTFINTERPOLATION_BILINEAR
} IPLHRTFInterpolation;
typedef struct {
    IPLHRTF hrtf;
} IPLBinauralEffectSettings;
typedef struct {
    IPLVector3 direction;
    IPLHRTFInterpolation interpolation;
    IPLfloat32 spatialBlend;
    IPLHRTF hrtf;
    IPLfloat32* peakDelays;
} IPLBinauralEffectParams;
IPLAPI IPLerror IPLCALL iplBinauralEffectCreate(IPLContext context, IPLAudioSettings* audioSettings, IPLBinauralEffectSettings* effectSettings, IPLBinauralEffect* effect);
IPLAPI IPLBinauralEffect IPLCALL iplBinauralEffectRetain(IPLBinauralEffect effect);
IPLAPI void IPLCALL iplBinauralEffectRelease(IPLBinauralEffect* effect);
IPLAPI void IPLCALL iplBinauralEffectReset(IPLBinauralEffect effect);
IPLAPI IPLAudioEffectState IPLCALL iplBinauralEffectApply(IPLBinauralEffect effect, IPLBinauralEffectParams* params, IPLAudioBuffer* in, IPLAudioBuffer* out);
IPLAPI IPLint32 IPLCALL iplBinauralEffectGetTailSize(IPLBinauralEffect effect);
IPLAPI IPLAudioEffectState IPLCALL iplBinauralEffectGetTail(IPLBinauralEffect effect, IPLAudioBuffer* out);
typedef struct {
    IPLSpeakerLayout speakerLayout;
    IPLHRTF hrtf;
} IPLVirtualSurroundEffectSettings;
typedef struct {
    IPLHRTF hrtf;
} IPLVirtualSurroundEffectParams;
IPLAPI IPLerror IPLCALL iplVirtualSurroundEffectCreate(IPLContext context, IPLAudioSettings* audioSettings, IPLVirtualSurroundEffectSettings* effectSettings, IPLVirtualSurroundEffect* effect);
IPLAPI IPLVirtualSurroundEffect IPLCALL iplVirtualSurroundEffectRetain(IPLVirtualSurroundEffect effect);
IPLAPI void IPLCALL iplVirtualSurroundEffectRelease(IPLVirtualSurroundEffect* effect);
IPLAPI void IPLCALL iplVirtualSurroundEffectReset(IPLVirtualSurroundEffect effect);
IPLAPI IPLAudioEffectState IPLCALL iplVirtualSurroundEffectApply(IPLVirtualSurroundEffect effect, IPLVirtualSurroundEffectParams* params, IPLAudioBuffer* in, IPLAudioBuffer* out);
IPLAPI IPLint32 IPLCALL iplVirtualSurroundEffectGetTailSize(IPLVirtualSurroundEffect effect);
IPLAPI IPLAudioEffectState IPLCALL iplVirtualSurroundEffectGetTail(IPLVirtualSurroundEffect effect, IPLAudioBuffer* out);