cosmos/steamaudio-sys/src/bindings.rs

extern "C" {
    #[doc = " Retrieves a single frame of tail samples from a panning effect's internal buffers.\n\nAfter the input to the panning effect has stopped, this function must be called instead of\n\\c iplPanningEffectApply until the return value indicates that no more tail samples remain.\n\n\\param  effect  The panning effect.\n\\param  out     The output audio buffer. Must have as many channels as needed for the speaker layout\nspecified when creating the panning effect. For example, if the speaker layout is\n\\c IPL_SPEAKERLAYOUTTYPE_SURROUND_5_1, the output buffer must contain 6 channels.\n\n\\return \\c IPL_AUDIOEFFECTSTATE_TAILREMAINING if any tail samples remain in the effect's internal buffers, or\n\\c IPL_AUDIOEFFECTSTATE_TAILCOMPLETE otherwise."]
    pub fn iplPanningEffectGetTail(
        effect: IPLPanningEffect,
        out: *mut IPLAudioBuffer,
    ) -> IPLAudioEffectState;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _IPLBinauralEffect_t {
    _unused: [u8; 0],
}
#[doc = " Spatializes a point source using an HRTF, based on the 3D position of the source relative to the listener. The\nsource audio can be 1- or 2-channel; in either case all input channels are spatialized from the same position."]
pub type IPLBinauralEffect = *mut _IPLBinauralEffect_t;
#[doc = " Nearest-neighbor filtering, i.e., no interpolation. Selects the measurement location that is closest to\nthe source's actual location."]
pub const IPLHRTFInterpolation_IPL_HRTFINTERPOLATION_NEAREST: IPLHRTFInterpolation = 0;
#[doc = " Bilinear filtering. Incurs a relatively high CPU overhead as compared to nearest-neighbor filtering, so use\nthis for sounds where it has a significant benefit. Typically, bilinear filtering is most useful for wide-band\nnoise-like sounds, such as radio static, mechanical noise, fire, etc."]
pub const IPLHRTFInterpolation_IPL_HRTFINTERPOLATION_BILINEAR: IPLHRTFInterpolation = 1;
#[doc = " Techniques for interpolating HRTF data. This is used when rendering a point source whose position relative to\nthe listener is not contained in the measured HRTF data."]
pub type IPLHRTFInterpolation = ::std::os::raw::c_int;
#[doc = " Settings used to create a binaural effect."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct IPLBinauralEffectSettings {
    #[doc = " The HRTF to use."]
    pub hrtf: IPLHRTF,
}
#[doc = " Parameters for applying a binaural effect to an audio buffer."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct IPLBinauralEffectParams {
    #[doc = " Unit vector pointing from the listener towards the source."]
    pub direction: IPLVector3,
    #[doc = " The interpolation technique to use."]
    pub interpolation: IPLHRTFInterpolation,
    #[doc = " Amount to blend input audio with spatialized audio. When set to 0, output audio is not spatialized at all\nand is close to input audio. If set to 1, output audio is fully spatialized."]
    pub spatialBlend: IPLfloat32,
    #[doc = " The HRTF to use."]
    pub hrtf: IPLHRTF,
    #[doc = " Base address of an array into which to write the left- and right-ear peak delays for the HRTF used\nto spatialize the input audio. Memory for this array must be allocated and managed by the caller.\nCan be NULL, in which case peak delays will not be written."]
    pub peakDelays: *mut IPLfloat32,
}
extern "C" {
    #[doc = " Creates a binaural effect.\n\n\\param  context         The context used to initialize Steam Audio.\n\\param  audioSettings   Global audio processing settings.\n\\param  effectSettings  The settings to use when creating the binaural effect.\n\\param  effect          [out] The created binaural effect.\n\n\\return Status code indicating whether or not the operation succeeded."]
    pub fn iplBinauralEffectCreate(
        context: IPLContext,
        audioSettings: *mut IPLAudioSettings,
        effectSettings: *mut IPLBinauralEffectSettings,
        effect: *mut IPLBinauralEffect,
    ) -> IPLerror;
}
extern "C" {
    #[doc = " Retains an additional reference to a binaural effect.\n\n\\param  effect  The binaural effect to retain a reference to.\n\n\\return The additional reference to the binaural effect."]
    pub fn iplBinauralEffectRetain(effect: IPLBinauralEffect) -> IPLBinauralEffect;
}
extern "C" {
    #[doc = " Releases a reference to a binaural effect.\n\n\\param  effect  The binaural effect to release a reference to."]
    pub fn iplBinauralEffectRelease(effect: *mut IPLBinauralEffect);
}
extern "C" {
    #[doc = " Resets the internal processing state of a binaural effect.\n\n\\param  effect  The binaural effect to reset."]
    pub fn iplBinauralEffectReset(effect: IPLBinauralEffect);
}
extern "C" {
    #[doc = " Applies a binaural effect to an audio buffer.\n\nThis effect CANNOT be applied in-place.\n\n\\param  effect  The binaural effect to apply.\n\\param  params  Parameters for applying the effect.\n\\param  in      The input audio buffer. Must be 1- or 2-channel.\n\\param  out     The output audio buffer. Must be 2-channel.\n\n\\return \\c IPL_AUDIOEFFECTSTATE_TAILREMAINING if any tail samples remain in the effect's internal buffers, or\n\\c IPL_AUDIOEFFECTSTATE_TAILCOMPLETE otherwise."]
    pub fn iplBinauralEffectApply(
        effect: IPLBinauralEffect,
        params: *mut IPLBinauralEffectParams,
        in_: *mut IPLAudioBuffer,
        out: *mut IPLAudioBuffer,
    ) -> IPLAudioEffectState;
}
extern "C" {
    #[doc = " Returns the number of tail samples remaining in a binaural effect's internal buffers.\n\nTail samples are audio samples that should be played even after the input to the effect has stopped\nplaying and no further input samples are available.\n\n\\param  effect  The binaural effect.\n\n\\return The number of tail samples remaining."]
    pub fn iplBinauralEffectGetTailSize(effect: IPLBinauralEffect) -> IPLint32;
}
extern "C" {
    #[doc = " Retrieves a single frame of tail samples from a binaural effect's internal buffers.\n\nAfter the input to the binaural effect has stopped, this function must be called instead of\n\\c iplBinauralEffectApply until the return value indicates that no more tail samples remain.\n\n\\param  effect  The binaural effect.\n\\param  out     The output audio buffer. Must be 2-channel.\n\n\\return \\c IPL_AUDIOEFFECTSTATE_TAILREMAINING if any tail samples remain in the effect's internal buffers, or\n\\c IPL_AUDIOEFFECTSTATE_TAILCOMPLETE otherwise."]
    pub fn iplBinauralEffectGetTail(
        effect: IPLBinauralEffect,
        out: *mut IPLAudioBuffer,
    ) -> IPLAudioEffectState;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _IPLVirtualSurroundEffect_t {
    _unused: [u8; 0],
}
#[doc = " Spatializes multi-channel speaker-based audio (e.g., stereo, quadraphonic, 5.1, or 7.1) using HRTF-based binaural\nrendering. The audio signal for each speaker is spatialized from a point in space corresponding to the speaker's\nlocation. This allows users to experience a surround sound mix over regular stereo headphones.\n\nVirtual surround is also a fast way to get approximate binaural rendering. All sources can be panned to some\nsurround format (say, 7.1). After the sources are mixed, the mix can be rendered using virtual surround. This can\nreduce CPU usage, at the cost of spatialization accuracy."]
pub type IPLVirtualSurroundEffect = *mut _IPLVirtualSurroundEffect_t;
#[doc = " Settings used to create a virtual surround effect."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct IPLVirtualSurroundEffectSettings {
    #[doc = " The speaker layout that will be used by input audio buffers."]
    pub speakerLayout: IPLSpeakerLayout,
    #[doc = " The HRTF to use."]
    pub hrtf: IPLHRTF,
}
#[doc = " Parameters for applying a virtual surround effect to an audio buffer."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct IPLVirtualSurroundEffectParams {
    #[doc = " The HRTF to use."]
    pub hrtf: IPLHRTF,
}
extern "C" {
    #[doc = " Creates a virtual surround effect.\n\n\\param  context         The context used to initialize Steam Audio.\n\\param  audioSettings   Global audio processing settings.\n\\param  effectSettings  The settings to use when creating the virtual surround effect.\n\\param  effect          [out] The created virtual surround effect.\n\n\\return Status code indicating whether or not the operation succeeded."]
    pub fn iplVirtualSurroundEffectCreate(
        context: IPLContext,
        audioSettings: *mut IPLAudioSettings,
        effectSettings: *mut IPLVirtualSurroundEffectSettings,
        effect: *mut IPLVirtualSurroundEffect,
    ) -> IPLerror;
}
extern "C" {
    #[doc = " Retains an additional reference to a virtual surround effect.\n\n\\param  effect  The virtual surround effect to retain a reference to.\n\n\\return The additional reference to the virtual surround effect."]
    pub fn iplVirtualSurroundEffectRetain(
        effect: IPLVirtualSurroundEffect,
    ) -> IPLVirtualSurroundEffect;
}
extern "C" {
    #[doc = " Releases a reference to a virtual surround effect.\n\n\\param  effect  The virtual surround effect to release a reference to."]
    pub fn iplVirtualSurroundEffectRelease(effect: *mut IPLVirtualSurroundEffect);
}
extern "C" {
    #[doc = " Resets the internal processing state of a virtual surround effect.\n\n\\param  effect  The virtual surround effect to reset."]
    pub fn iplVirtualSurroundEffectReset(effect: IPLVirtualSurroundEffect);
}
extern "C" {
    #[doc = " Applies a virtual surround effect to an audio buffer.\n\nThis effect CANNOT be applied in-place.\n\n\\param  effect  The virtual surround effect to apply.\n\\param  params  Parameters for applying the effect.\n\\param  in      The input audio buffer. Must have as many channels as needed for the speaker layout\nspecified when creating the virtual surround effect.\n\\param  out     The output audio buffer. Must be 2-channel.\n\n\\return \\c IPL_AUDIOEFFECTSTATE_TAILREMAINING if any tail samples remain in the effect's internal buffers, or\n\\c IPL_AUDIOEFFECTSTATE_TAILCOMPLETE otherwise."]
    pub fn iplVirtualSurroundEffectApply(
        effect: IPLVirtualSurroundEffect,
        params: *mut IPLVirtualSurroundEffectParams,
        in_: *mut IPLAudioBuffer,
        out: *mut IPLAudioBuffer,
    ) -> IPLAudioEffectState;
}
extern "C" {
    #[doc = " Returns the number of tail samples remaining in a virtual surround effect's internal buffers.\n\nTail samples are audio samples that should be played even after the input to the effect has stopped\nplaying and no further input samples are available.\n\n\\param  effect  The virtual surround effect.\n\n\\return The number of tail samples remaining."]
    pub fn iplVirtualSurroundEffectGetTailSize(effect: IPLVirtualSurroundEffect) -> IPLint32;
}
extern "C" {
    #[doc = " Retrieves a single frame of tail samples from a virtual surround effect's internal buffers.\n\nAfter the input to the virtual surround effect has stopped, this function must be called instead of\n\\c iplVirtualSurroundEffectApply until the return value indicates that no more tail samples remain.\n\n\\param  effect  The virtual surround effect.\n\\param  out     The output audio buffer. Must be 2-channel.\n\n\\return \\c IPL_AUDIOEFFECTSTATE_TAILREMAINING if any tail samples remain in the effect's internal buffers, or\n\\c IPL_AUDIOEFFECTSTATE_TAILCOMPLETE otherwise."]
    pub fn iplVirtualSurroundEffectGetTail(
        effect: IPLVirtualSurroundEffect,
        out: *mut IPLAudioBuffer,
    ) -> IPLAudioEffectState;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _IPLAmbisonicsEncodeEffect_t {
    _unused: [u8; 0],
}
